# solarcontrol

./: CMakeLists.txt  Readme.md
doc/: scheme.sql
include/api/: Config.hpp  Device.hpp  DeviceElectrical.hpp  DeviceHT.hpp  DeviceOnOff.hpp  DevicePassive.hpp  Dispatcher.hpp  Handler.hpp  Logs.hpp  Shelly.hpp  Storage.hpp
include/configuration/: Args.hpp  Configuration.hpp  ConfigurationObserver.hpp  ConfigurationPart.hpp  ConfigurationReader.hpp  ConfigurationReaderDB.hpp  ConfigurationSolarControl.hpp  Json.hpp
include/control/: Arduino.hpp  BSBLan.hpp  ConfigurationControl.hpp  Dummy.hpp  HT.hpp  HTBluetooth.hpp  HTTP.hpp  HTWifi.hpp  Input.hpp  OnOff.hpp  OnOffFactory.hpp  Plug.hpp  Pro.hpp  Relay.hpp  Uni.hpp  Wind.hpp
include/database/: DB.hpp  DBConfig.hpp  Query.hpp  Result.hpp
include/datetime/: Date.hpp  DateTime.hpp  DateTimeRange.hpp  HourMinuteSecond.hpp  Month.hpp  QuarterHour.hpp  Range.hpp  Ranges.hpp  Time.hpp  TimeRange.hpp  TimeRanges.hpp  Timer.hpp  TimespanHistory.hpp  Timestamp.hpp
include/device/: Device.hpp  DeviceCMV.hpp  DeviceFactory.hpp  DeviceGrid.hpp  DeviceHT.hpp  DeviceHTBluetooth.hpp  DeviceHTWifi.hpp  DeviceHWS.hpp  DeviceHeater.hpp  DeviceObserver.hpp  DeviceOnOff.hpp  DevicePV.hpp  DevicePassive.hpp  DeviceTimeRange.hpp  DeviceWeather.hpp  DeviceWind.hpp  Devices.hpp  DevicesHT.hpp  DevicesHTImpl.hpp  DevicesOnOff.hpp  DevicesOnOffImpl.hpp  DevicesPassive.hpp  DevicesPassiveImpl.hpp  DevicesWeather.hpp  DevicesWeatherImpl.hpp
include/device/electrical/: Battery.hpp  BatteryController.hpp  BatteryPassive.hpp  CMV.hpp  Controller.hpp  Cooler.hpp  DeviceBattery.hpp  DeviceBatteryPassive.hpp  Grid.hpp  (+20 more)
include/display/: LCDDisplay.hpp
include/energy/: Amount.hpp  ConfigurationEnergy.hpp  Counter.hpp  Global.hpp  GlobalMeter.hpp  History.hpp  HistoryDay.hpp  HistoryQuarterHour.hpp  MovingAverage.hpp
include/excpt/: API.hpp  BSBLan.hpp  Config.hpp  ConfigParser.hpp  Context.hpp  Database.hpp  Exception.hpp  Shelly.hpp
include/ht/: HistoryQuarterHour.hpp  MinMax.hpp
include/http/: HTTP.hpp
include/input/: Dummy.hpp  Input.hpp  InputFactory.hpp  MQTT.hpp  Plus1PM.hpp  Pro.hpp
include/logs/: Logger.hpp  State.hpp
include/meter/: Dummy.hpp  Meter.hpp  MeterFactory.hpp  Plug.hpp  Pro3EM.hpp  ProEM.hpp  Voltmeter.hpp
include/mqtt/: Client.hpp  ClientMeter.hpp  Subscriber.hpp
include/sensor/: Sensor.hpp  SensorObserver.hpp  Sensors.hpp
include/shelly/: Autodetect.hpp  AutodetectBLE.hpp  HTTP.hpp  MQTT.hpp  Sys.hpp
include/stat/: CumulativeHigherFrequency.hpp  History.hpp  MinMax.hpp  MinMaxAvg.hpp  MovingAverage.hpp
include/thread/: DevicesManager.hpp  HistorySync.hpp  LCD.hpp  SensorsManager.hpp  Stats.hpp  WaiterThread.hpp
include/upgrade/: Upgrade.hpp  Upgrade_1_11.hpp  Upgrade_1_12.hpp  Upgrades.hpp
include/utils/: args.hpp  config.hpp  signal.hpp
include/weather/: HistoryQuarterHourHT.hpp  HistoryQuarterHourWind.hpp  MinMaxHT.hpp
include/websocket/: Server.hpp  SolarControl.hpp
src/: solarcontrol.cpp
src/api/: Config.cpp  Device.cpp  DeviceElectrical.cpp  DeviceHT.cpp  DeviceOnOff.cpp  DevicePassive.cpp  Dispatcher.cpp  Handler.cpp  Logs.cpp  Shelly.cpp  Storage.cpp
src/configuration/: Args.cpp  Configuration.cpp  ConfigurationObserver.cpp  ConfigurationPart.cpp  ConfigurationReader.cpp  ConfigurationReaderDB.cpp  ConfigurationSolarControl.cpp  Json.cpp
src/control/: Arduino.cpp  BSBLan.cpp  ConfigurationControl.cpp  HT.cpp  HTBluetooth.cpp  HTTP.cpp  HTWifi.cpp  Input.cpp  OnOff.cpp  OnOffFactory.cpp  Plug.cpp  Pro.cpp  Relay.cpp  Wind.cpp
src/database/: DB.cpp  DBConfig.cpp  Query.cpp  Result.cpp  tables.cpp
src/datetime/: Date.cpp  DateTime.cpp  DateTimeRange.cpp  HourMinuteSecond.cpp  Month.cpp  QuarterHour.cpp  Range.cpp  Ranges.cpp  Time.cpp  TimeRange.cpp  TimeRanges.cpp  Timer.cpp  TimespanHistory.cpp  Timestamp.cpp
src/device/: Device.cpp  DeviceCMV.cpp  DeviceElectrical.cpp  DeviceFactory.cpp  DeviceGrid.cpp  DeviceHT.cpp  DeviceHTBluetooth.cpp  DeviceHTWifi.cpp  DeviceHWS.cpp  DeviceHeater.cpp  DeviceObserver.cpp  DeviceOnOff.cpp  DevicePV.cpp  DevicePassive.cpp  DeviceTimeRange.cpp  DeviceWind.cpp  Devices.cpp  DevicesHT.cpp  DevicesHTImpl.cpp  DevicesOnOff.cpp  DevicesOnOffImpl.cpp  DevicesPassive.cpp  DevicesPassiveImpl.cpp  DevicesWeather.cpp  DevicesWeatherImpl.cpp
src/display/: LCDDisplay.cpp
src/energy/: Amount.cpp  ConfigurationEnergy.cpp  Counter.cpp  Global.cpp  GlobalMeter.cpp  History.cpp  HistoryDay.cpp  HistoryQuarterHour.cpp  MovingAverage.cpp
src/excpt/: Context.cpp  Exception.cpp
src/ht/: HistoryQuarterHour.cpp  MinMax.cpp
src/http/: HTTP.cpp
src/input/: InputFactory.cpp  MQTT.cpp  Pro.cpp
src/logs/: Logger.cpp  State.cpp
src/meter/: Meter.cpp  MeterFactory.cpp  Plug.cpp  Pro3EM.cpp  ProEM.cpp  Voltmeter.cpp
src/mqtt/: Client.cpp  ClientMeter.cpp
src/sensor/: Sensor.cpp  Sensors.cpp
src/shelly/: Autodetect.cpp  AutodetectBLE.cpp  HTTP.cpp  MQTT.cpp  Sys.cpp
src/stat/: MovingAverage.cpp
src/thread/: DevicesManager.cpp  HistorySync.cpp  LCD.cpp  SensorsManager.cpp  Stats.cpp  WaiterThread.cpp
src/upgrade/: Upgrade.cpp  Upgrade_1_11.cpp  Upgrade_1_12.cpp  Upgrades.cpp
src/utils/: args.cpp  config.cpp  signal.cpp
src/weather/: HistoryQuarterHourHT.cpp  MinMaxHT.cpp  historyQuarterHourWind.cpp
src/websocket/: Server.cpp  SolarControl.cpp
sys/: install.sh  upgrade-solarcontrol-front.sh
(+106 files in other folders)
